--- a/Assets/Game/Source/Settings/SettingsAssembly.asmdef
+++ b/Assets/Game/Source/Settings/SettingsAssembly.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:977ad7b0370644489b9fd53acb2d811e",
         "GUID:84aa4cb246b89433d9ba9cac700238ad",
-        "GUID:2072e12f7259847989b6f0b9e4ab7a1b"
+        "GUID:2072e12f7259847989b6f0b9e4ab7a1b",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
